# iso-10303

./: Cargo.toml  README.md
doc/: ifc.md
examples/family/: main.rs
graphs/: ifc4.dot
ifc/: Cargo.toml
ifc/assets/: Jigui.ifc  Pipe_system.ifc  building_2.ifc
ifc/assets/IFCXML-RUS/: Test_Tasks_All_List.md
ifc/assets/IFCXML-RUS/03_IFCXML/: 0_T01_TT01_bath-csg-solid.ifcxml  0_T01_TT03_basin-advanced-brep.ifcxml  0_T02_TT01_basin-faceted-brep.ifcxml  0_T03_TT01_basin-tessellation.ifcxml  0_T04_TT03_brep-model.ifcxml  D_T53_TT00_air-terminal-element.ifcxml  D_T53_TT01_air-terminal-library-object.ifcxml
ifc/assets/buildingSMART/Sample-Test-Files/: README.md
ifc/assets/defect/: Jigui.ifc  building_2.ifc
ifc/examples/: read.rs
ifc/src/: ifc2x3.rs  ifc4.rs  lib.rs
schemas/: ifc4lite.exp
schemas/IFC4/: IFC.exp
src/: lib.rs
src/express/: datatype.rs
src/step/: parser.rs  reader.rs  structure.rs
